<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context="com.example.hp.exercise8_notepad.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:weightSum="5">


        <Button
            android:text="@string/Help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1" />

        <Button
            android:text="@string/View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1" />

        <Button
            android:text="@string/Setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1" />

        <Button
            android:text="@string/Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1" />

        <Button
            android:id="@+id/btndialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/New" />
    </LinearLayout>

</LinearLayout>
